--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -26,7 +26,7 @@ services:
     platform: linux/x86_64
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
-      - ./database/data:/var/lib/mysql  # volumeのエントリポイント
+      - DBdata:/var/lib/mysql  # volumeのエントリポイント
       - ./database/my.cnf:/etc/mysql/conf.d/my.cnf  # cnfファイル
       - ./database/sql/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql # 起動時に実行するsqlファイル
     env_file:
@@ -36,3 +36,6 @@ services:
     ports:
       - 3306:3306
     restart: always
+
+volumes:
+  DBdata:
